<resources>
    <string name="app_name">Lab 3 - Sample HTTP Connections</string>

    <string name="title_hello">Hello World</string>
    <string name="title_params">Parameters</string>
    <string name="title_wait">Wait!</string>

    <string name="text_response_label">Response from Web Service: </string>
    <string name="action_get">GET</string>
    <string name="action_post">POST</string>
    <string name="hint_message">Enter your name</string>
    <string name="action_async">Asynchronous</string>
    <string name="action_sync">Synchronous</string>

</resources>
